welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
  if (isBirthday==true) {
    if (speed<66) 
    	return 0
    if (speed>65 && speed<86)
    	return 1
    if (speed>85)
    	return 2
  }
  else {
  	if (speed<61) 
    	return 0
    if (speed>60 && speed<81)
    	return 1
    if (speed>80)
    	return 2
  }
}
  